--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button class="heart">heart</button>
       <button class="ballon">ballon</button>
     </div>
+    <button class="openMenu">≡</button>
 
     <div class="flat"></div>
 
